Erro de digitação

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="menu">
 
             <div class="grupo1">
-                <a class="btn" href="porcoes.html">PORÇÕES</a>
+                <a class="btn" href="/porcoes.html">PORÇÕES</a>
                 <a class="btn orange" href="#">SUCOS/REFRIGERANTES</a>
             </div>
             
