atualizando a página para celular e tablet

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     </head>
     <body>
 
+    <!-- FUNDO FIXO -->
+        <div class="fundo"></div>
+
+    <!-- APP -->
+        <div class="app">
+
         <div class="container">
             <h1>QUIOSQUE DO MAZINHO</h1>
             <h2>PORÇÕES & DRINKS</h2>
