Atualização do título da página de botão

--- a/porcoes.html
+++ b/porcoes.html
@@ -9,8 +9,10 @@
 </head>
 <body class="pagina-cardapio">
 
-<h1 class="titulo-pagina">QUIOSQUE DO MAZINHO</h1>
-<h2 class="titulo-pagina">Porções</h2>
+    <div class="titulo-pagina">
+        <h1>QUIOSQUE DO MAZINHO</h1>
+        <h2>PORÇÕES</h2>
+    </div>
 
 <!-- ITEM 1 -->
 <div class="item-card">
@@ -117,7 +119,7 @@ body.pagina-cardapio::before {
 }
 
 /* TÍTULO */
-.titulo-pagina {
+.titulo-pagina h1 {
     font-size: 32px;
     font-weight: bold;
     text-align: center;
@@ -126,7 +128,7 @@ body.pagina-cardapio::before {
     text-shadow: 2px 2px 5px black;
 }
 
-.titulo-pagina h2 {
+.titulo-pagina h2 { 
     font-size: 14px;
     margin-top: 3px;
     letter-spacing: 3px;
