atualização da página de botões

--- a/porcoes.html
+++ b/porcoes.html
@@ -120,6 +120,8 @@ body.pagina-cardapio::before {
 
 /* TÍTULO */
 .titulo-pagina h1 {
+    margin-top: 20px;
+    margin-bottom: 18px;
     font-size: 12px;
     font-weight: bold;
     text-align: center;
@@ -130,7 +132,8 @@ body.pagina-cardapio::before {
 
 .titulo-pagina h2 { 
     font-size: 14px;
-    margin-top: 3px;
+    margin-top: 20px;
+    margin-bottom: 16px;
     letter-spacing: 3px;
     text-align: center;
     color: white;
