Inserindo novas páginas para o botão "Porções"

--- a/porcoes.html
+++ b/porcoes.html
@@ -13,6 +13,11 @@
         <h1>QUIOSQUE DO MAZINHO</h1>
         <h2>PORÇÕES</h2>
     </div>
+ 
+<div class="lista-itens">
+
+<!-- PÁGINA 1 (PEIXES)-->   
+<div class="pagina ativa">
 
 <!-- ITEM 1 -->
 <div class="item-card">
@@ -98,11 +103,200 @@
             <button class="btn-icon">
                 <i class='bx bx-message-rounded'></i>
             </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!-- PÁGINA 2 (CALABRESA/ISCA DE FRANGO/MINI PASTEIS/BATATA)-->   
+<div class="pagina ativa">
+
+<!-- ITEM 1 -->
+<div class="item-card">
+    <div class="item-img">
+        <img src="img/lula1.jpg" alt="Lula">
+    </div>
+
+    <div class="item-info">
+        <h3>LULA</h3>
+        <span class="preco">R$ XXX</span>
+        <p>Porção de lula crocante, acompanha limão e molho especial.</p>
+
+        <div class="item-acoes">
+            <button class="btn-icon">
+                <i class='bx bxs-heart'></i>
+            </button>
+            <button class="btn-icon">
+                <i class='bx bx-message-rounded'></i>
+            </button>
         </div>
     </div>
 </div>
 
-<script src="script.js"></script>
+<!-- ITEM 2 -->
+<div class="item-card">
+    <div class="item-img">
+        <img src="img/camarao.jpg" alt="Camarão">
+    </div>
+
+    <div class="item-info">
+        <h3>CAMARÃO</h3>
+        <span class="preco">R$ XXX</span>
+        <p>Camarão empanado servido com molho da casa.</p>
+
+        <div class="item-acoes">
+            <button class="btn-icon">
+                <i class='bx bxs-heart'></i>
+            </button>
+            <button class="btn-icon">
+                <i class='bx bx-message-rounded'></i>
+            </button>
+        </div>
+    </div>
+</div>
+
+<!-- ITEM 3 -->
+<div class="item-card">
+    <div class="item-img">
+        <img src="img/peixe.jpg" alt="Isca de Peixe">
+    </div>
+
+    <div class="item-info">
+        <h3>ISCA DE PEIXE</h3>
+        <span class="preco">R$ XXX</span>
+        <p>Iscas de peixe douradas e crocantes.</p>
+
+        <div class="item-acoes">
+            <button class="btn-icon">
+                <i class='bx bxs-heart'></i>
+            </button>
+            <button class="btn-icon">
+                <i class='bx bx-message-rounded'></i>
+            </button>
+        </div>
+    </div>
+</div>
+    <!-- ITEM 4 -->
+<div class="item-card">
+    <div class="item-img">
+        <img src="img/porquinho.jpg" alt="Porquinho">
+    </div>
+
+    <div class="item-info">
+        <h3>PORQUINHO</h3>
+        <span class="preco">R$ XXX</span>
+        <p>Peixe marinho saboroso, com carne branca e macia.</p>
+
+        <div class="item-acoes">
+            <button class="btn-icon">
+                <i class='bx bxs-heart'></i>
+            </button>
+            <button class="btn-icon">
+                <i class='bx bx-message-rounded'></i>
+            </button>
+                </div>
+            </div>
+        </div>
+
+<!-- PÁGINA 3 (PORÇÃO DE LEGUMES/MANDIOCA/POLENTA/MILHO NO PORTE OU NA ESPIGA)-->   
+<div class="pagina ativa">
+
+<!-- ITEM 1 -->
+<div class="item-card">
+    <div class="item-img">
+        <img src="img/lula1.jpg" alt="Lula">
+    </div>
+
+    <div class="item-info">
+        <h3>LULA</h3>
+        <span class="preco">R$ XXX</span>
+        <p>Porção de lula crocante, acompanha limão e molho especial.</p>
+
+        <div class="item-acoes">
+            <button class="btn-icon">
+                <i class='bx bxs-heart'></i>
+            </button>
+            <button class="btn-icon">
+                <i class='bx bx-message-rounded'></i>
+            </button>
+        </div>
+    </div>
+</div>
+
+<!-- ITEM 2 -->
+<div class="item-card">
+    <div class="item-img">
+        <img src="img/camarao.jpg" alt="Camarão">
+    </div>
+
+    <div class="item-info">
+        <h3>CAMARÃO</h3>
+        <span class="preco">R$ XXX</span>
+        <p>Camarão empanado servido com molho da casa.</p>
+
+        <div class="item-acoes">
+            <button class="btn-icon">
+                <i class='bx bxs-heart'></i>
+            </button>
+            <button class="btn-icon">
+                <i class='bx bx-message-rounded'></i>
+            </button>
+        </div>
+    </div>
+</div>
+
+<!-- ITEM 3 -->
+<div class="item-card">
+    <div class="item-img">
+        <img src="img/peixe.jpg" alt="Isca de Peixe">
+    </div>
+
+    <div class="item-info">
+        <h3>ISCA DE PEIXE</h3>
+        <span class="preco">R$ XXX</span>
+        <p>Iscas de peixe douradas e crocantes.</p>
+
+        <div class="item-acoes">
+            <button class="btn-icon">
+                <i class='bx bxs-heart'></i>
+            </button>
+            <button class="btn-icon">
+                <i class='bx bx-message-rounded'></i>
+            </button>
+        </div>
+    </div>
+</div>
+    <!-- ITEM 4 -->
+<div class="item-card">
+    <div class="item-img">
+        <img src="img/porquinho.jpg" alt="Porquinho">
+    </div>
+
+    <div class="item-info">
+        <h3>PORQUINHO</h3>
+        <span class="preco">R$ XXX</span>
+        <p>Peixe marinho saboroso, com carne branca e macia.</p>
+
+        <div class="item-acoes">
+            <button class="btn-icon">
+                <i class='bx bxs-heart'></i>
+            </button>
+            <button class="btn-icon">
+                <i class='bx bx-message-rounded'></i>
+            </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--PAGINAÇÃO-->
+<div class='paginacao'>
+    <button id="paginacao">❮</button>
+    <span id="contador">1 / 2</span>
+    <button id="next">❮</button>
+</div>
+
 </body>
 <style>
     @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
