Continuação da páginas e botões de passar para avançar e adiantar

--- a/porcoes.html
+++ b/porcoes.html
@@ -292,12 +292,14 @@
 
 <!--PAGINAÇÃO-->
 <div class='paginacao'>
-    <button id="paginacao">❮</button>
-    <span id="contador">1 / 2</span>
-    <button id="next">❮</button>
+    <button id="prev">❮</button>
+    <span id="contador">1 / 3</span>
+     <button id="next">❯</button>
 </div>
 
 </body>
+
+<script></script>
 <style>
     @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
@@ -442,6 +444,42 @@ body.pagina-cardapio::before {
 .btn-icon .bx-message-rounded {
     color: #fbc02d;
 }
+
+.lista-itens {
+    flex: 1;
+}
+
+.pagina {
+    display: none;
+}
+
+.pagina.ativa {
+    display: block;
+}
+
+.paginacao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 15px 0 20px;
+}
+
+.paginacao button {
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    border: none;
+    background: #222;
+    color: #fff;
+    cursor: pointer;
+}
+
+.paginacao span {
+    font-weight: bold;
+    color: #fff;
+}
+
 
 /* 📱 Celular */
 @media (max-width: 600px) {
