Inserindo os itens na página 3

--- a/porcoes.html
+++ b/porcoes.html
@@ -107,9 +107,10 @@
             </div>
         </div>
     </div>
+</div>
 
 <!-- PÁGINA 2 (BATATA/ MINI PASTEIS/ CALABRESA/ISCA DE FRANGO)-->   
-<div class="pagina ativa">
+<div class="pagina">
 
 <!-- ITEM 1 -->
 <div class="item-card">
@@ -197,18 +198,19 @@
                 </div>
             </div>
         </div>
+    </div>
 
 <!-- PÁGINA 3 (PORÇÃO DE LEGUMES/MANDIOCA/POLENTA/MILHO NO PORTE OU NA ESPIGA)-->   
-<div class="pagina ativa">
+<div class="pagina">
 
 <!-- ITEM 1 -->
 <div class="item-card">
     <div class="item-img">
-        <img src="img/lula1.jpg" alt="Lula">
+        <img src="img/porcaolegumes.jpg" alt="Porção de Legumes">
     </div>
 
     <div class="item-info">
-        <h3>LULA</h3>
+        <h3>Porção de Legumes</h3>
         <span class="preco">R$ XXX</span>
         <p>Porção de lula crocante, acompanha limão e molho especial.</p>
 
@@ -226,11 +228,11 @@
 <!-- ITEM 2 -->
 <div class="item-card">
     <div class="item-img">
-        <img src="img/camarao.jpg" alt="Camarão">
+        <img src="img/mandioca.jpg" alt="Mandioca">
     </div>
 
     <div class="item-info">
-        <h3>CAMARÃO</h3>
+        <h3>Porção de Madioca</h3>
         <span class="preco">R$ XXX</span>
         <p>Camarão empanado servido com molho da casa.</p>
 
@@ -248,11 +250,11 @@
 <!-- ITEM 3 -->
 <div class="item-card">
     <div class="item-img">
-        <img src="img/peixe.jpg" alt="Isca de Peixe">
+        <img src="img/polenta.jpg" alt="Polenta">
     </div>
 
     <div class="item-info">
-        <h3>ISCA DE PEIXE</h3>
+        <h3>POLENTA</h3>
         <span class="preco">R$ XXX</span>
         <p>Iscas de peixe douradas e crocantes.</p>
 
@@ -269,11 +271,11 @@
     <!-- ITEM 4 -->
 <div class="item-card">
     <div class="item-img">
-        <img src="img/porquinho.jpg" alt="Porquinho">
+        <img src="img/milhoponteouespiga.jpg" alt="Milho no pote ou na Espiga">
     </div>
 
     <div class="item-info">
-        <h3>PORQUINHO</h3>
+        <h3>MILHO NO PORTE OU NA ESPIGA</h3>
         <span class="preco">R$ XXX</span>
         <p>Peixe marinho saboroso, com carne branca e macia.</p>
 
@@ -284,6 +286,8 @@
             <button class="btn-icon">
                 <i class='bx bx-message-rounded'></i>
             </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -395,7 +399,7 @@ body.pagina-cardapio::before {
 .item-card {
     display: flex;
     gap: 8px;
-    margin: 8 15px;
+    margin: 8px 15px;
     align-items: stretch;
 }
 
