Atualizadas, páginas iguais em suas configurações

--- a/porcoes.html
+++ b/porcoes.html
@@ -16,14 +16,12 @@
  
 <div class="lista-itens">
 
-<!-- PÁGINA 1 (PEIXES)-->   
+<!--============ PÁGINA 1 (PEIXES) ====================-->   
 <div class="pagina ativa">
 
 <!-- ITEM 1 -->
 <div class="item-card">
-    <div class="item-img">
-        <img src="img/lula1.jpg" alt="Lula">
-    </div>
+    <div class="item-img"><img src="img/lula1.jpg" alt="Lula"></div>
 
     <div class="item-info">
         <h3>LULA</h3>
@@ -31,21 +29,15 @@
         <p>Porção de lula crocante, acompanha limão e molho especial.</p>
 
         <div class="item-acoes">
-            <button class="btn-icon">
-                <i class='bx bxs-heart'></i>
-            </button>
-            <button class="btn-icon">
-                <i class='bx bx-message-rounded'></i>
-            </button>
+            <button class="btn-icon"><i class='bx bxs-heart'></i></button>
+            <button class="btn-icon"><i class='bx bx-message-rounded'></i></button>
         </div>
     </div>
 </div>
 
 <!-- ITEM 2 -->
 <div class="item-card">
-    <div class="item-img">
-        <img src="img/camarao.jpg" alt="Camarão">
-    </div>
+    <div class="item-img"><img src="img/camarao.jpg" alt="Camarão"></div>
 
     <div class="item-info">
         <h3>CAMARÃO</h3>
@@ -53,21 +45,15 @@
         <p>Camarão empanado servido com molho da casa.</p>
 
         <div class="item-acoes">
-            <button class="btn-icon">
-                <i class='bx bxs-heart'></i>
-            </button>
-            <button class="btn-icon">
-                <i class='bx bx-message-rounded'></i>
-            </button>
+            <button class="btn-icon"><i class='bx bxs-heart'></i></button>
+            <button class="btn-icon"><i class='bx bx-message-rounded'></i></button>
         </div>
     </div>
 </div>
 
 <!-- ITEM 3 -->
 <div class="item-card">
-    <div class="item-img">
-        <img src="img/peixe.jpg" alt="Isca de Peixe">
-    </div>
+    <div class="item-img"><img src="img/peixe.jpg" alt="Isca de Peixe"></div>
 
     <div class="item-info">
         <h3>ISCA DE PEIXE</h3>
@@ -75,21 +61,15 @@
         <p>Iscas de peixe douradas e crocantes.</p>
 
         <div class="item-acoes">
-            <button class="btn-icon">
-                <i class='bx bxs-heart'></i>
-            </button>
-            <button class="btn-icon">
-                <i class='bx bx-message-rounded'></i>
-            </button>
+            <button class="btn-icon"><i class='bx bxs-heart'></i></button>
+            <button class="btn-icon"><i class='bx bx-message-rounded'></i></button>
         </div>
     </div>
 </div>
 
     <!-- ITEM 4 -->
 <div class="item-card">
-    <div class="item-img">
-        <img src="img/porquinho.jpg" alt="Porquinho">
-    </div>
+    <div class="item-img"><img src="img/porquinho.jpg" alt="Porquinho"></div>
 
     <div class="item-info">
         <h3>PORQUINHO</h3>
@@ -97,26 +77,18 @@
         <p>Peixe marinho saboroso, com carne branca e macia.</p>
 
         <div class="item-acoes">
-            <button class="btn-icon">
-                <i class='bx bxs-heart'></i>
-            </button>
-            <button class="btn-icon">
-                <i class='bx bx-message-rounded'></i>
-            </button>
-                </div>
+            <button class="btn-icon"><i class='bx bxs-heart'></i></button>
+            <button class="btn-icon"><i class='bx bx-message-rounded'></i></button>
             </div>
         </div>
     </div>
 </div>
-
-<!-- PÁGINA 2 (BATATA/ MINI PASTEIS/ CALABRESA/ISCA DE FRANGO)-->   
+<!--=================== PÁGINA 2 ======================-->   
 <div class="pagina">
 
 <!-- ITEM 1 -->
 <div class="item-card">
-    <div class="item-img">
-        <img src="img/batata1.jpg" alt="batata">
-    </div>
+    <div class="item-img"><img src="img/batata1.jpg" alt="batata"></div>
 
     <div class="item-info">
         <h3>BATATA</h3>
@@ -124,15 +96,11 @@
         <p>Porção de lula crocante, acompanha limão e molho especial.</p>
 
         <div class="item-acoes">
-            <button class="btn-icon">
-                <i class='bx bxs-heart'></i>
-            </button>
-            <button class="btn-icon">
-                <i class='bx bx-message-rounded'></i>
-            </button>
+            <button class="btn-icon"><i class='bx bxs-heart'></i></button>
+            <button class="btn-icon"><i class='bx bx-message-rounded'></i></button>
+            </div>
         </div>
     </div>
-</div>
 
 <!-- ITEM 2 -->
 <div class="item-card">
@@ -200,7 +168,7 @@
         </div>
     </div>
 
-<!-- PÁGINA 3 (PORÇÃO DE LEGUMES/MANDIOCA/POLENTA/MILHO NO PORTE OU NA ESPIGA)-->   
+<!--=================== PÁGINA 3 ======================-->   
 <div class="pagina">
 
 <!-- ITEM 1 -->
@@ -210,7 +178,7 @@
     </div>
 
     <div class="item-info">
-        <h3>Porção de Legumes</h3>
+        <h3>PORÇÃO DE LEGUMES</h3>
         <span class="preco">R$ XXX</span>
         <p>Porção de lula crocante, acompanha limão e molho especial.</p>
 
@@ -232,7 +200,7 @@
     </div>
 
     <div class="item-info">
-        <h3>Porção de Madioca</h3>
+        <h3>PORÇÃO DE MANDIOCA</h3>
         <span class="preco">R$ XXX</span>
         <p>Camarão empanado servido com molho da casa.</p>
 
@@ -286,12 +254,11 @@
             <button class="btn-icon">
                 <i class='bx bx-message-rounded'></i>
             </button>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
+    
 </div>
 
 <!--PAGINAÇÃO-->
@@ -349,6 +316,9 @@
 
 /* FUNDO + OVERLAY */
 body.pagina-cardapio {
+
+    overflow: hidden;
+
     min-height: 100vh;
     font-family: "Poppins", sans-serif;
 
@@ -376,7 +346,7 @@ body.pagina-cardapio::before {
 /* TÍTULO */
 .titulo-pagina h1 {
     margin-top: 20px;
-    margin-bottom: 18px;
+    margin-bottom: 25px;
     font-size: 12px;
     font-weight: bold;
     text-align: center;
@@ -388,7 +358,7 @@ body.pagina-cardapio::before {
 .titulo-pagina h2 { 
     font-size: 14px;
     margin-top: 20px;
-    margin-bottom: 16px;
+    margin-bottom: 25px;
     letter-spacing: 3px;
     text-align: center;
     color: white;
@@ -483,15 +453,25 @@ body.pagina-cardapio::before {
 }
 
 .lista-itens {
+    position: relative;
     flex: 1;
+    padding-top: 80px;
 }
 
 .pagina {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     display: none;
 }
 
 .pagina.ativa {
     display: block;
+}
+
+.pagina .item-card:first-child {
+    margin-top: 0;
 }
 
 .paginacao {
